--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.1.0",
+    "firebase-functions": "^6.3.1",
     "lib": "^5.1.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
