--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/vite": "^4.0.1",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +29,7 @@
     "ui": "github:shadcn/ui"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.8",
     "@eslint/js": "^9.17.0",
     "@tailwindcss/postcss": "^4.0.1",
     "@types/node": "^22.12.0",
