--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,10 @@
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.3",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^4.0.1",
+    "tailwindcss": "^4.0.5",
     "tailwindcss-animate": "^1.0.7",
-    "ui": "github:shadcn/ui"
+    "ui": "github:shadcn/ui",
+    "vite-plugin-tailwind": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.8",
