--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
     "lib": "^5.1.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -38,6 +39,6 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "vite": "^6.0.5"
+    "vite": "^6.1.0"
   }
 }
